[XForms] NPOTB cannot attach JS listeners to xforms events. Bug 428509, p=msterlin r=olli+aaronr